clusters/homelab/apps/stocks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stocks
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
