clusters/homelab/apps/stocks/ingestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  namespace: stocks
  labels:
    app: stocks-ingestion
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: stocks-ingestion
