clusters/homelab/apps/stocks/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: stocks
  labels:
    app: stocks-minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: api
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: console
  selector:
    app: stocks-minio
