clusters/homelab/apps/stocks/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: stocks
  labels:
    app: stocks-nats
spec:
  type: ClusterIP
  ports:
    - port: 4222
      targetPort: 4222
      protocol: TCP
      name: client
    - port: 8222
      targetPort: 8222
      protocol: TCP
      name: monitor
  selector:
    app: stocks-nats
