clusters/homelab/apps/stocks/paper-filler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paper-filler
  namespace: stocks
  labels:
    app: stocks-paper-filler
spec:
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
      name: http
  selector:
    app: stocks-paper-filler
