clusters/homelab/apps/stocks/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: stocks
  labels:
    app: stocks-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: stocks-postgres
