clusters/homelab/apps/stocks/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: stocks
  labels:
    app: stocks-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: stocks-redis
