clusters/homelab/apps/stocks/training-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training
  namespace: stocks
  labels:
    app: stocks-training
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: http
  selector:
    app: stocks-training
